[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/statistics.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background.tex" type="Texture" id=2]
[ext_resource path="res://assets/fonts/simpleness_60.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/textures/line.tex" type="Texture" id=4]
[ext_resource path="res://assets/textures/btn_small.tex" type="Texture" id=5]
[ext_resource path="res://assets/textures/btn_small_pressed.tex" type="Texture" id=6]
[ext_resource path="res://assets/fonts/simpleness_65.fnt" type="BitmapFont" id=7]

[sub_resource type="Animation" id=1]

resource/name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("highscore:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 110, 1212.9 ), Vector2( 110, 220 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("watermelons_found:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.1, 0.6 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 110, 1362.9 ), Vector2( 110, 370 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("rounds_played:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.2, 0.7 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 110, 1522.9 ), Vector2( 110, 530 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("average_per_round:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.3, 0.8 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 110, 1692.9 ), Vector2( 110, 700 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("btn_back:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.5, 0.8 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "outro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_back:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("average_per_round:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.1, 0.4 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("rounds_played:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.2, 0.5 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("watermelons_found:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.3, 0.6 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("highscore:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.4, 0.7 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0.9 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"back_to_menu" } ] }

[node name="statistics" type="Node"]

script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="highscore" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 110, 1212.9 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="highscore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -98.0
margin/right = 739.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "HIGHSCORE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="highscore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1050.0
margin/top = -98.0
margin/right = 1719.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "12"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line" type="TextureFrame" parent="highscore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="watermelons_found" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 110, 1362.9 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="watermelons_found"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -98.0
margin/right = 739.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Watermelons found"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="watermelons_found"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1050.0
margin/top = -98.0
margin/right = 1719.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "88"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line" type="TextureFrame" parent="watermelons_found"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="rounds_played" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 110, 1522.9 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="rounds_played"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -98.0
margin/right = 739.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Rounds played"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="rounds_played"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1050.0
margin/top = -98.0
margin/right = 1719.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "7"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line" type="TextureFrame" parent="rounds_played"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="average_per_round" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 110, 1692.9 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="average_per_round"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -98.0
margin/right = 739.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Average per round"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="average_per_round"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1050.0
margin/top = -98.0
margin/right = 1719.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "11"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line" type="TextureFrame" parent="average_per_round"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="btn_back" type="TextureButton" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 770.0
margin/top = 807.0
margin/right = 1191.0
margin/bottom = 981.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
__meta__ = { "_edit_group_":true }

[node name="lbl" type="Label" parent="btn_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 417.0
margin/bottom = 159.0
custom_fonts/font = ExtResource( 7 )
text = "BACK"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 1 )
anims/outro = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[connection signal="pressed" from="btn_back" to="." method="_on_btn_back_pressed"]


